# MyAlgo

./: .gitignore  AST.hpp  CMakeLists.txt  CMakePresets.json  CodeGenerator.hpp  Grammar.text  LICENSE  README.md  SemanticAnalyzer.hpp  SymbolTable.hpp  lexer.cpp  main.cpp  parser.cpp  parser.hpp  test.algo  test.cpp  test2.cpp  test3.algo  test_arrays.algo  test_arrays.cpp  token.hpp
docs/: Grammar.md  languge_spec.md  roadmap.md
examples/: arithmetic.algo  array_sum.algo  factorial.algo  function_example.algo  hello.algo  if_else.algo  loop_for.algo  loop_while.algo  matrix_example.algo  structure_example.algo
installer/: MyAlgo.iss  build-installer.ps1
src/: main.cpp
src/AST/: AST.hpp
src/codegen/: CodeGenerator.hpp
src/core/: token.hpp
src/lexer/: lexer.cpp  lexer.hpp
src/parser/: parser.cpp  parser.hpp
src/semantic/: SemanticAnalyzer.hpp  SymbolTable.hpp
testes/: test2.algo  test_all_features.algo  test_array.algo  test_for.algo  test_function.algo  test_if.algo  test_logic.algo  test_matrix.algo  test_matrix_small.algo  test_procedure.algo  test_repeat.algo  test_structure.algo  test_structure_small.algo  test_while.algo
